--- a/test1.html
+++ b/test1.html
@@ -1,5 +1,6 @@
 <html>
 <head>
+    <title>Hemanth's Pictures</title>
     <style>
     body {
     padding: 0;
@@ -10,9 +11,9 @@
 
 .container1 {
     width: 100vw;
-    height: 65vh;
+    height: 85vh;
     display: grid;
-    grid-template-rows: 7fr 1fr;
+    grid-template-rows: 11fr 1fr;
     background: #021919;
 }
 
@@ -80,10 +81,10 @@ ul {
 .content1 {
     position: absolute;
     background: #021919;
-    top: 10vh;
+    top: 8vh;
     left: 0;
     width: 100vw;
-    height: 55vh;
+    height: 75vh;
     overflow: hidden;
     display: flex;
     align-items: center;
@@ -166,8 +167,8 @@ ul {
                     <a class="active" href="index.html">Home</a>
                     <a href="index.html#about">About</a>
                     <a href="index.html#portfolio">Portfolio</a>
-                    <a href="galary.html">My Galary</a>
-                    <a href="test.html">Photoshoots Done</a>
+                    <a href="test.html">My Galary</a>
+                    <a href="test1.html">Photoshoot</a>
           </div>
     </div>
         <div class="container1">
@@ -179,12 +180,12 @@ ul {
                             <label for="tab-1">
                                 <div class="tab">
                                     <img
-                                        src="https://images.pexels.com/photos/1559117/pexels-photo-1559117.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260" />
+                                        src="assets/img/sized/2.jpg" />
                                 </div>
                             </label>
                             <div class="content1">
                                 <img
-                                    src="https://images.pexels.com/photos/1559117/pexels-photo-1559117.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260" />
+                                    src="assets/img/sized/2.jpg" />
                             </div>
                         </li>
                         <li>
@@ -192,12 +193,12 @@ ul {
                             <label for="tab-2">
                                 <div class="tab">
                                     <img
-                                        src="https://images.pexels.com/photos/688660/pexels-photo-688660.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260" />
+                                        src="assets/img/sized/3.jpg" />
                                 </div>
                             </label>
                             <div class="content1">
                                 <img
-                                    src="https://images.pexels.com/photos/688660/pexels-photo-688660.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260" />
+                                    src="assets/img/sized/3.jpg" />
                             </div>
                         </li>
                         <li>
@@ -205,12 +206,12 @@ ul {
                             <label for="tab-3">
                                 <div class="tab">
                                     <img
-                                        src="https://images.pexels.com/photos/730256/pexels-photo-730256.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260" />
+                                        src="assets/img/sized/4.jpg" />
                                 </div>
                             </label>
                             <div class="content1">
                                 <img
-                                    src="https://images.pexels.com/photos/730256/pexels-photo-730256.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260" />
+                                    src="assets/img/sized/4.jpg" />
                             </div>
                         </li>
                         <li>
@@ -218,11 +219,11 @@ ul {
                             <label for="tab-4">
                                 <div class="tab">
                                     <img
-                                        src="https://images.pexels.com/photos/22427/pexels-photo.jpg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260" />
+                                        src="assets/img/sized/5.jpg" />
                                 </div>
                             </label>
                             <div class="content1">
-                                <img src="https://images.pexels.com/photos/22427/pexels-photo.jpg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260" />
+                                <img src="assets/img/sized/5.jpg" />
                             </div>
                         </li>
                         <li>
@@ -230,11 +231,11 @@ ul {
                             <label for="tab-5">
                                 <div class="tab">
                                     <img
-                                        src="https://images.pexels.com/photos/789380/pexels-photo-789380.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260" />
+                                        src="assets/img/3.jpg" />
                                 </div>
                             </label>
                             <div class="content1">
-                                    <img src="https://images.pexels.com/photos/789380/pexels-photo-789380.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260" />
+                                    <img src="assets/img/3.jpg" />
                                 </div>
                         </li>
                         <li>
@@ -242,11 +243,11 @@ ul {
                             <label for="tab-6">
                                 <div class="tab">
                                     <img
-                                        src="https://images.pexels.com/photos/355411/pexels-photo-355411.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940" />
+                                        src="assets/img/61.jpg" />
                                 </div>
                             </label>
                             <div class="content1">
-                                    <img src="https://images.pexels.com/photos/355411/pexels-photo-355411.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940" />
+                                    <img src="assets/img/61.jpg" />
                                 </div>
                         </li>
                         <li>
@@ -254,11 +255,11 @@ ul {
                             <label for="tab-7">
                                 <div class="tab">
                                     <img
-                                        src="https://images.pexels.com/photos/1424246/pexels-photo-1424246.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260" />
+                                        src="assets/img/13.jpg" />
                                 </div>
                             </label>
                             <div class="content1">
-                                    <img src="assets/img/profile-img.jpg"/></div>
+                                    <img src="assets/img/13.jpg"/></div>
                         </li>
                     </ul>
                 </div>
@@ -268,19 +269,19 @@ ul {
 <h1 style="text-align:center"><b>My pictures</b></h1>
             <div class="container2">
                     <div class="box">
-                      <img src="assets/img/portfolio/portfolio-1.jpg">
+                      <img src="assets/img/sized/one.jpg">
                     </div>
                     <div class="box">
-                      <img src="assets/img/portfolio/portfolio-2.jpg">
+                      <img src="assets/img/sized/14.png">
                     </div>
                     <div class="box">
-                      <img src="assets/img/portfolio/portfolio-3.jpg">
+                      <img src="assets/img/sized/10.png">
                     </div>
                     <div class="box">
-                      <img src="assets/img/portfolio/portfolio-4.jpg">
+                      <img src="assets/img/sized/5.jpg">
                     </div>
                     <div class="box">
-                     <img src="assets/img/profile-img.jpg">
+                     <img src="assets/img/sized/6.jpg">
                     </div>
               </div>
               
