--- a/photoshoot.html
+++ b/photoshoot.html
@@ -167,8 +167,8 @@ ul {
                     <a class="active" href="index.html">Home</a>
                     <a href="index.html#about">About</a>
                     <a href="index.html#portfolio">Portfolio</a>
-                    <a href="test.html">My Galary</a>
-                    <a href="test1.html">Photoshoot</a>
+                    <a href="gallery.html">My Gallery</a>
+                    <a href="photoshoot.html">Photoshoot</a>
           </div>
     </div>
         <div class="container1">
