--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>iPortfolio Bootstrap Template - Index</title>
+  <title>Hemanth Portfolio</title>
   <meta content="" name="descriptison">
   <meta content="" name="keywords">
 
@@ -19,7 +19,9 @@
   <!-- Vendor CSS Files -->
   <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
   <link href="assets/vendor/icofont/icofont.min.css" rel="stylesheet">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
   <link href="assets/vendor/boxicons/css/boxicons.min.css" rel="stylesheet">
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
   <link href="assets/vendor/venobox/venobox.css" rel="stylesheet">
   <link href="assets/vendor/owl.carousel/assets/owl.carousel.min.css" rel="stylesheet">
   <link href="assets/vendor/aos/aos.css" rel="stylesheet">
@@ -53,8 +55,8 @@
           <li class="active"><a href="index.html"><i class="bx bx-home"></i> <span>Home</span></a></li>
           <li><a href="#about"><i class="bx bx-user"></i> <span>About Myself</span></a></li>
           <li><a href="#portfolio"><i class="bx bx-book-content"></i> Portfolio</a></li>
-          <li><a href="test.html"><i class="bx bx-book-content"></i>My Galary</a></li>
-          <li><a href="test1.html"><i class="bx bx-book-content"></i>Photoshoot</a></li>
+          <li><a href="gallery.html"><i class="bx bx-book-content"></i>My Gallery</a></li>
+          <li><a href="photoshoot.html"><i class="bx bx-book-content"></i>Photoshoot</a></li>
 
         </ul>
       </nav><!-- .nav-menu -->
@@ -67,7 +69,7 @@
   <section id="hero" class="d-flex flex-column justify-content-center align-items-center">
     <div class="hero-container" data-aos="fade-in">
       <h1>LS Hemanth</h1>
-      <p>I'm <span class="typed" data-typed-items="Engineer, Model, Freelancer, Photographer"></span></p>
+      <p>I'm <span class="typed" data-typed-items="An Engineer, A Model, Freelancer"></span></p>
     </div>
   </section><!-- End Hero -->
 
@@ -77,8 +79,9 @@
     <div class="container">
 
       <div class="section-title">
-        <h2>About</h2>
-        <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
+        <h2>About Myself</h2>
+        <p>I'm a 24 year model,Electronic Engineer graduate and a employee at Akamai as a Networking Engineer from Bangalore.My confidence and positive attitude
+           is been my backbone for tmy success. I consider myself to be passionate.</p>
       </div>
 
       <div class="row">
@@ -86,31 +89,38 @@
           <img src="assets/img/3.jpg" class="img-fluid" alt="">
         </div>
         <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
-          <h3>I'm an Employee  &amp; a Model.</h3>
+          <h3>I'm An Employee  &amp; A Model.</h3>
           <p class="font-italic">
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-            magna aliqua.
+            I have a good sense of humor which makes easy for people to work with me.
+            I'm open for modeling and bussiness collaborations. Feel free to contact me, I would love to hear from you all.
           </p>
           <div class="row">
             <div class="col-lg-6">
               <ul>
-                <li><i class="icofont-rounded-right"></i> <strong>Birthday:</strong> 19 June 1996</li>
-                <li><i class="icofont-rounded-right"></i> <strong>Website:</strong> www.example.com</li>
-                <li><i class="icofont-rounded-right"></i> <strong>Phone:</strong> +91 8892984256</li>
+                <li><i class="icofont-rounded-right"></i> <strong>Birthday:</strong> 19th July,1996</li>
+                <li><i class="icofont-rounded-right"></i> <strong>Degree:</strong> BE</li>
+                <li><i class="icofont-rounded-right"></i> <strong>Shoe Size:</strong> 9</li>
+                <li><i class="icofont-rounded-right"></i> <strong>Eyes Color:</strong> Black</li>
                 <li><i class="icofont-rounded-right"></i> <strong>City:</strong> City : Bangalore, KA</li>
               </ul>
             </div>
             <div class="col-lg-6">
               <ul>
-                <li><i class="icofont-rounded-right"></i> <strong>Age:</strong> 24</li>
-                <li><i class="icofont-rounded-right"></i> <strong>Degree:</strong> BE</li>
-                <li><i class="icofont-rounded-right"></i> <strong>PhEmailone:</strong> email@example.com</li>
+                <li><i class="icofont-rounded-right"></i> <strong>Height:</strong> 5.10"</li>
+                <li><i class="icofont-rounded-right"></i> <strong>Waist:</strong> 34</li>
+                <li><i class="icofont-rounded-right"></i> <strong>Shirt Size:</strong> 42</li>
+                <li><i class="icofont-rounded-right"></i> <strong>Hair Color:</strong> Black</li>
+                <li><i class="icofont-rounded-right"></i> <strong>Phone:</strong> +91 8892984256</li>
               </ul>
             </div>
           </div>
           <p>
-            Officiis eligendi itaque labore et dolorum mollitia officiis optio vero. Quisquam sunt adipisci omnis et ut. Nulla accusantium dolor incidunt officia tempore. Et eius omnis.
-            Cupiditate ut dicta maxime officiis quidem quia. Sed et consectetur qui quia repellendus itaque neque. Aliquid amet quidem ut quaerat cupiditate. Ab et eum qui repellendus omnis culpa magni laudantium dolores.
+            I'm a self motivated person, 
+            self disciplined I am a good team player as well as has a good ability to lead the team. 
+            I can adopt to any kind of environment. I am a good listener and quick learner.I have an analytical approach towards things I do.
+             I believe, that helps me to understand a wide range of issues from what determines the price, causes, and consequences.
+             In my free time, I enjoy spending time with friends, sometimes cooking, listening to music,reading, travelling,
+              and playing outdoor sports.  
           </p>
         </div>
       </div>
@@ -118,13 +128,155 @@
     </div>
   </section><!-- End About Section -->
 
+
+  <div class="container"> 
+  <div class="section-title">
+    <h2>Skills Information</h2>
+  </div>
+  <div class="container" style="width: 50%;" data-aos="fade-left">
+    <h1><b>Languages Known:</b></h1>
+    <label><b>English -</b></label>
+    <div class="progress" data-aos="fade-left">
+      <div class="progress-bar progress-bar-striped active" role="progressbar" aria-valuenow="97" aria-valuemin="0" aria-valuemax="100" style="width:97%">
+        <h5 style="color: white;"><b>Read , Write , Speak</b></h5>
+      </div>
+    </div>
+    <label><b>Kannada -</b></label>
+    <div class="progress" data-aos="fade-right">
+      <div class="progress-bar progress-bar-success progress-bar-striped active" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100" style="width:100%">
+        <h5 style="color: white;"><b>Read , Write , Speak</b></h5>
+      </div>
+    </div>
+    <label><b>Hindi -</b></label>
+    <div class="progress" data-aos="fade-left">
+      <div class="progress-bar progress-bar-warning progress-bar-striped active" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100" style="width:70%">
+        <h5 style="color: white;"><b>Read , Write , Speak</b></h5>
+      </div>
+    </div>
+    <label><b>Tamil -</b></label>
+    <div class="progress" data-aos="fade-right">
+      <div class="progress-bar progress-bar-info progress-bar-striped active" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width:80%">
+        <h5 style="color: white;"><b>Speak</b></h5>
+      </div>
+    </div>
+    <label><b>Telugu -</b></label>
+    <div class="progress" data-aos="fade-left">
+      <div class="progress-bar progress-bar-danger progress-bar-striped active" role="progressbar" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100" style="width:40%">
+        <h5 style="color: white;"><b>Speak</b></h5>
+      </div>
+    </div>
+  </div>
+  </div>
+   <!-- ======= Facts Section ======= -->
+   <section id="facts" class="facts">
+    <div class="container">
+
+      <div class="section-title">
+        <h2>Key Qualities</h2>
+        <p>Additional Information About Myself.</p>
+      </div>
+
+      <div class="row no-gutters">
+
+        <div class="col-lg-3 col-md-6 d-md-flex align-items-md-stretch" data-aos="fade-up">
+          <div class="count-box">
+            <i class="icofont-simple-smile"></i>
+            <p><strong>Positive Attitude</strong> Good stamina &amp Communication Skills</p>
+          </div>
+        </div>
+
+        <div class="col-lg-3 col-md-6 d-md-flex align-items-md-stretch" data-aos="fade-up" data-aos-delay="100">
+          <div class="count-box">
+            <i class="icofont-business-man-alt-1"></i>
+            <p><strong>Excellent walking posture</strong> Familiarity in different poses</p>
+          </div>
+        </div>
+
+        <div class="col-lg-3 col-md-6 d-md-flex align-items-md-stretch" data-aos="fade-up" data-aos-delay="200">
+          <div class="count-box">
+            <i class="icofont-laughing"></i>
+            <p><strong>Good sense of style </strong> Good facial projection</p>
+          </div>
+        </div>
+
+        <div class="col-lg-3 col-md-6 d-md-flex align-items-md-stretch" data-aos="fade-up" data-aos-delay="300">
+          <div class="count-box">
+            <i class="icofont-users-alt-5"></i>
+            <p><strong>Tolerant</strong> Adaptable</p>
+          </div>
+        </div>
+
+      </div>
+
+    </div>
+  </section><!-- End Facts Section -->
+
+   <!-- ======= Resume Section ======= -->
+   <section id="resume" class="resume">
+    <div class="container">
+
+      <div class="section-title">
+        <h2>More Information On Myself</h2>
+      </div>
+
+      <div class="row">
+        <div class="col-lg-6" data-aos="fade-up">
+     <h3 class="resume-title">Education</h3>
+          <div class="resume-item">
+            <ul>
+              <li>BE in Electronic and Communication at Cambridge Institute Of technology </li>
+              <li>PU at St.Joseph's PU College</li>
+              <li>Schooling at Tunbridge High School(ICSE)</li>
+            </ul>
+          </div>
+        </div>
+    <div class="col-lg-6" data-aos="fade-up">
+     <h3 class="resume-title">Strengths</h3>
+          <div class="resume-item">
+            <ul>
+              <li>Time Management</li>
+              <li>Self Confidence</li>
+              <li>Leadership Skills</li>
+      <li>Ability to cope up with various situations</li>
+            </ul>
+          </div>
+        </div>
+        <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
+          <h3 class="resume-title">Technical Skills</h3>
+          <div class="resume-item">
+            <ul>
+              <li>Customer Handling Skills</li>
+              <li>Technical Troubleshooting</li>
+              <li>Digital Marketing Strategies</li>
+       <li>Presentation Skills</li>
+            </ul>
+          </div>
+        </div>
+    <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
+          <h3 class="resume-title">My Hobbies</h3>
+          <div class="resume-item">
+            <ul>
+              <li>Sketching</li>
+              <li>Cooking</li>
+              <li>Riding</li>
+       <li>Reading Books</li>
+            </ul>
+          </div>
+        </div>
+      </div>
+
+    </div>
+  </section><!-- End Resume Section -->
+
+
     <!-- ======= Portfolio Section ======= -->
     <section id="portfolio" class="portfolio section-bg">
       <div class="container">
 
         <div class="section-title">
           <h2>Portfolio</h2>
-          <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
+          <p>Modeling is my passion, I enjoy posing for photoshoots. I have attached few of my picture.Feel free to contact me,
+             I would love to hear from you all.</p>
         </div>
 
         <div class="row" data-aos="fade-up">
